--- a/UniswapV2/client/src/index.css
+++ b/UniswapV2/client/src/index.css
@@ -1,5 +1,6 @@
 body {
   margin: 0;
+  /* background-color: black; */
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
@@ -11,3 +12,19 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+html{
+  /* background-color: black; */
+  color: white;
+}
+
+div{
+  /* background-color: black; */
+  color: white;
+}
+
+/* * {
+  background: #000 !important;
+  color: #0f0 !important;
+  outline: solid #f00 1px !important;
+} */
